// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Should correctly render InputDatePicker with minimal parameters Test with value 1`] = `
<div>
  <div
    class="survey-question__input-date-picker-container"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <input
          autocomplete="none"
          class="apptr__form-input input-date-picker input-large"
          id="test"
          name="test"
          placeholder="ClickToSelectDate"
          type="text"
          value="10/08/2022"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Should correctly render InputDatePicker with minimal parameters Test without value 1`] = `
<div>
  <div
    class="survey-question__input-date-picker-container"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <input
          autocomplete="none"
          class="apptr__form-input input-date-picker input-large"
          id="test"
          name="test"
          placeholder="ClickToSelectDate"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Should correctly render InputDatePicker with various parameters Test time, placeholder labels and locale 1`] = `
<div>
  <div
    class="survey-question__input-date-picker-container"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <input
          autocomplete="none"
          class="apptr__form-input input-date-picker input-large"
          id="test"
          name="test"
          placeholder="click"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Should correctly render InputDatePicker with various parameters Test with min max date values 1`] = `
<div>
  <div
    class="survey-question__input-date-picker-container"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <input
          autocomplete="none"
          class="apptr__form-input input-date-picker input-large"
          id="test"
          name="test"
          placeholder="ClickToSelectDate"
          type="text"
          value="11/11/2022"
        />
      </div>
    </div>
  </div>
</div>
`;
